tests/paczka1/small_fuzzy/87501123.err
Error in line 2: S361 S15 50,6
Error in line 9: ees3n3bW S17 40,4
